--- a/TP8/src/app/EXERCICE/composants/parc/parc.component.html
+++ b/TP8/src/app/EXERCICE/composants/parc/parc.component.html
@@ -1,6 +1,6 @@
 <div class="row p-2 border align-items-center justify-content-between">
   <div class="col-9">
-    <img width="100" [src]="defaultImgUrl" alt="" />
+    <img width="100" [src]="parc.photo" alt="" />
     <span>id :{{ parc.id }}</span>
     <span class="fw-bold">{{ parc.nom | uppercase }}</span>
     <span class="badge bg-primary text-white"
