--- a/TP9_Angular16/src/app/app.component.html
+++ b/TP9_Angular16/src/app/app.component.html
@@ -1,3 +1,2 @@
-<app-addproduct></app-addproduct>
-<!-- <app-employe></app-employe> -->
-
+<!-- <app-addproduct></app-addproduct> -->
+<app-employe></app-employe>
