--- a/TP9_Angular16/src/app/EXERCICE/components/employe/employe.component.html
+++ b/TP9_Angular16/src/app/EXERCICE/components/employe/employe.component.html
@@ -1,28 +1,40 @@
-<div class="container">
+<div class="container mt-5">
   <h2>Ajout d'un employé</h2>
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
     <div>
-      <label> Donnez le matricule</label>
-      <input type="text" formControlName="matricule" />
+      <label class="form-label"> Donnez le matricule</label>
+      <input class="form-control" type="text" formControlName="matricule" />
     </div>
 
     <div>
-      <label> Donnez le nom</label>
-      <input type="text" formControlName="nom" />
+      <label class="form-label"> Donnez le nom</label>
+      <input class="form-control" type="text" formControlName="nom" />
     </div>
 
     <div class="p-2 bg-light rounded">
       <strong>Affiliation</strong>
       <div formGroupName="affiliation">
         <div>
-          <label> Choisissez le département</label>
-          <input type="radio" value="TI" formControlName="departement" /> IT
-          <input type="radio" value="Finance" formControlName="departement" />
+          <label class="form-label">Choisissez le département </label>
+
+          <input
+            class="form-check-input"
+            type="radio"
+            value="TI"
+            formControlName="departement"
+          />
+          IT
+          <input
+            class="form-check-input"
+            type="radio"
+            value="Finance"
+            formControlName="departement"
+          />
           Finance
         </div>
         <div>
           <label> Donnez la fonction</label>
-          <select formControlName="fonction">
+          <select class="form-select" formControlName="fonction">
             <option *ngFor="let choice of choices" [value]="choice">
               {{ choice }}
             </option>
@@ -31,10 +43,56 @@
       </div>
     </div>
 
-    <input type="button" value="Ajouter Diplôme" />
-    <br />
-    <button class="btn btn-primary">Ajouter Employé</button>
-    <input type="button" (click)="onVider()" value="Vider" />
+    <div class="p-2 mt-3 bg-light rounded">
+      <strong>Diplomes</strong>
+      <div formArrayName="diplome">
+        <div *ngFor="let item of lesDiplomes.controls; index as i">
+          <div class="row align-items-end" [formGroupName]="i">
+            <div class="col-5">
+              <label class="form-label" for="intitule"
+                >intitule du diplome</label
+              >
+              <input
+                class="form-control"
+                type="text"
+                name="intitule"
+                formControlName="intitule"
+              />
+            </div>
+            <div class="col-5">
+              <label class="form-label" for="annee">annee du diplome</label>
+              <input
+                class="form-control"
+                type="number"
+                name="annee"
+                formControlName="annee"
+              />
+            </div>
+            <div class="col-2">
+              <input
+                type="button"
+                class="btn btn-warning"
+                (click)="onSupprimerDiplome(i)"
+                value="Supprimer"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <input
+      type="button"
+      class="btn btn-dark"
+      (click)="onAjouterDiplome()"
+      value="Ajouter Diplôme"
+    />
+    <div>
+      <button type="submit" class="btn btn-primary">Ajouter Employé</button>
+      <button type="button" class="btn btn-secondary" (click)="onVider()">
+        vider
+      </button>
+    </div>
   </form>
 </div>
 <app-listemployes [employees]="employes"></app-listemployes>
